--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,14 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+@media screen and (max-with:600px){
+
+header{
+
+    padding: 1rem;
+}   a 
+section{
+    margin: 0.5%;
+}
+}
